<resources>
    <string-array name="opciones">
        <item>PESOS</item>
        <item>EUROS</item>
        <item>DOLARES</item>
    </string-array>
    <string name="app_name">BancoUTN</string>
    <string name="TituloBanco">Banco UTN SantaFe</string>
    <string name="TituloNombre">Nombre</string>
    <string name="TituloApellido">Apellido</string>
    <string name="DescripcionPlazoFijo">Para construir un plazo fijo, necesitamos algunos datos</string>
    <string name="TituloMoneda">Moneda</string>
    <string name="TituloTNA">Tasa Nominal Anual</string>
    <string name="TituloTEA">Tasa Efectiva Anual</string>
    <string name="TituloCapital">Capital a Invertir ($)</string>
    <string name="TituloDias">Días: 0</string>
    <string name="TituloRenovacion">Con renovación automática</string>
    <string name="TituloSimuladorPlazoFijo">Simulador Plazo Fijo</string>
    <string name="Plazo">Plazo: 0 días</string>
    <string name="Capital">Capital:</string>
    <string name="InteresesGanados">Intereses ganados:</string>
    <string name="MontoTotal">Monto Total:</string>
    <string name="MontoTotalAnual">Monto total anual:</string>
    <string name="Confirmar">Confirmar</string>
</resources>
