<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimularPlazoFijo" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="99dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mainactivity" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="Banco UTN Santa Fe"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TituloTNA" />

        <EditText
            android:id="@+id/montoTNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TituloTEA" />

        <EditText
            android:id="@+id/montoTEA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TituloCapital" />

        <EditText
            android:id="@+id/montoCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textoDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloDias" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloRenovacion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TituloSimuladorPlazoFijo" />

    <TextView
        android:id="@+id/plazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Plazo" />

    <TextView
        android:id="@+id/capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Capital" />

    <TextView
        android:id="@+id/interesesGanados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InteresesGanados" />

    <TextView
        android:id="@+id/montoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MontoTotal" />

    <TextView
        android:id="@+id/montoTotalAnual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MontoTotalAnual" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Confirmar" />
    </LinearLayout>

</LinearLayout>